// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Checkbox /> renders checkbox 1`] = `
<DocumentFragment>
  <input
    class=""
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> renders checkbox with all props defined 1`] = `
<DocumentFragment>
  <input
    class="test-class"
    style="margin: 0px;"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> renders checkbox with the right default props 1`] = `
<DocumentFragment>
  <input
    class=""
    type="checkbox"
  />
</DocumentFragment>
`;
